fixing the button spacing

--- a/reset-password.css
+++ b/reset-password.css
@@ -41,6 +41,8 @@ ul li {
 }
 .buttons {
   text-align: center;
+  display: flex;
+  justify-content: space-around;
 }
 .buttons button {
   font-size: 16px;
@@ -53,7 +55,7 @@ ul li {
   cursor: pointer;
   background-color: #328ee0;
   color: white;
-  width: auto;
+  width: 182px;
   display: flex;
   align-items: center;
   justify-content: center;
